--- a/.github/workflows/repo_mirror.yaml
+++ b/.github/workflows/repo_mirror.yaml
@@ -46,7 +46,6 @@ jobs:
           wget --tries=5 --retry-connrefused --retry-on-host-error https://github.com/elanthia-online/jinxp/releases/download/v0.4.0/jinxp \
           && chmod +x jinxp \
           && ./jinxp -i map_files
-          ls -Rlha
           sed -i 's|/assets/|/map_files/|g' dist/manifest.json
           mv dist/manifest.json ./
           mv dist/headers ./
@@ -61,7 +60,11 @@ jobs:
           git add manifest.json
           git add report.txt
           git add updated_at.txt
-          if (git status --porcelain | wc -l | grep 0 > /dev/null);then echo "No changes to commit";else git commit -m "Repo updates within last 3 hours";fi
+          if [ -z "$(git status --porcelain)" ]; then 
+            echo "No changes to commit"
+          else 
+            git commit -m "Repo updates within last 3 hours"
+          fi
 
       - name: Push changes
         uses: ad-m/github-push-action@master
